welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: '=' expected but ';' found.
var nbPas==0;
            ^Variables:3: error: '=' expected but ';' found.
var dejafait==0;
               ^