welcome.lessons.welcome.variables.Variables.scala.code
var nbPas==0;
var dejafait==0;

while(!estSurBiscuit){
	avance()


}
prendBiscuit();poseBiscuit()
